@@ -1,0 +1,23 @@
+<?xml version="1.0" encoding="utf-8"?>
+<xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
+  <file source-language="en" target-language="de" datatype="plaintext" original="file.ext">
+    <body>
+      <trans-unit id="148e6348f8cf9270b308abe072d813dd" resname="user.login">
+        <source>user.login</source>
+        <target>Anmelden</target>
+      </trans-unit>
+      <trans-unit id="d6738e5cbd718a3864bed1a5cb496c58" resname="user.logout">
+        <source>user.logout</source>
+        <target>Abmelden</target>
+      </trans-unit>
+      <trans-unit id="acf607165edf7bef72eb28b17efa35b3" resname="user.profile">
+        <source>user.profile</source>
+        <target>Profil</target>
+      </trans-unit>
+      <trans-unit id="f83db05233319b3ae15d6081e41153be" resname="user.register">
+        <source>user.register</source>
+        <target>Registrieren</target>
+      </trans-unit>
+    </body>
+  </file>
+</xliff>
