@@ -2,14 +2,7 @@
 
 {% block body %}
   <div>
-    {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-      {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
-      <a href="{{ path('fos_user_security_logout') }}">
-        {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
-      </a>
-    {% else %}
-      <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
-    {% endif %}
+{{ knp_menu_render('user') }}
   </div>
 
   {% if app.request.hasPreviousSession %}
