@@ -37,6 +37,7 @@
         "doctrine/doctrine-migrations-bundle":      "2.1.*@dev",
         "stof/doctrine-extensions-bundle":          "~1.1",
         "friendsofsymfony/user-bundle":             "2.0.*@dev",
+        "knplabs/knp-menu-bundle":                  "~2.0",
 
         "ramsey/uuid":                              "~2.8",
         "league/commonmark":                        "@stable"
