@@ -2,6 +2,7 @@ Please view this file on the master branch, on branches it may be out of date.
 
 v 1.5.0 (unreleased)
   - added proper view templates
+  - added KnpMenu Bundle and menu services
 
 v 1.4.0 (06-05-2015)
   - added support for FOSUserBundle
